# XRoboToolkit-Teleop-ROS

./: .gitignore  README.md
cmake/: eigen_system.cmake  httplib.cmake  nlohmann_json.cmake  placo.cmake
examples/arx_ros1/: CMakeLists.txt  package.xml
examples/arx_ros1/src/: main_v1.cpp  main_v2.cpp
examples/arx_ros1/urdf/: X7Sleft1.urdf  x7sRIGHT.urdf
examples/arx_ros2/: CMakeLists.txt  README.md  install.sh  package.xml
examples/arx_ros2/scripts/: env_humble  remote_X7s_ee.sh  remote_X7s_joints.sh
examples/arx_ros2/src/: UrdfVizClient.cc  UrdfVizClient.h  main_v1.cpp  main_v2.cpp  urdf_viz.cpp  xr_to_arx.cpp  xr_to_arx.h
examples/arx_ros2/urdf/: README.md  X7S_arm_only.urdf
examples/assets/: mjcf_to_urdf.py  urdf_to_mjcf.py  vis_mjcf.py
examples/assets/arx_x7s/: scene.xml
examples/assets/arx_x7s/urdf/: X7S.urdf  converted_link12.stl  converted_link13.stl  converted_link14.stl  converted_link18.stl  converted_link19.stl  converted_link2.stl  converted_link3.stl  converted_link5.stl
examples/assets/universal_robots_ur5e/: scene.xml
examples/python/: ik_mujuco_ur5e.py  ik_solver.py  utils.py  xr_mujuco_ur5e.py  xr_mujuco_x7s.py
examples/python/assets/arx_x7s/: X7S.xml
examples/python/assets/arx_x7s/urdf/: converted_base_link.stl  converted_link10.stl  converted_link11.stl  converted_link15.stl  converted_link16.stl  converted_link17.stl  converted_link20.stl  converted_link21.stl  converted_link22.stl  converted_link4.stl  converted_link6.stl  converted_link7.stl  converted_link8.stl  converted_link9.stl
picoxr/src/: publisher.cpp
ros1/picoxr/: CMakeLists.txt
ros1/picoxr/src/: publisher.cpp
ros1_noetic/picoxr/: package.xml
ros1_noetic/xr_msgs/: CMakeLists.txt  package.xml
ros2/picoxr/: CMakeLists.txt  package.xml
ros2_humble/picoxr/: CMakeLists.txt
ros2_humble/picoxr/src/: publisher.cpp
ros2_humble/xr_msgs/: CMakeLists.txt  package.xml
xr_msgs/msg/: Controller.msg
