<?xml version="1.0"?>
<package format="2">
  <name>xr_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="472365351duino@gmail.com">duino</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
